fixed overflow issue in the input

--- a/workflows/asana-card/app/styles/_tasks.scss
+++ b/workflows/asana-card/app/styles/_tasks.scss
@@ -407,6 +407,7 @@
     background-color: $studioGray-20;
     font-size: 14px;
     padding: 0 15px;
+    padding-right: 70px;
     color: $deepBlue-60;
     letter-spacing: 1px;
     transition: .1s ease-in-out;
